actualizacion de archivos de vistas

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -26,23 +26,26 @@
 
              />
 
-
          <TextView
              android:layout_width="match_parent"
-             android:layout_height="322dp"
+             android:layout_height="380dp"
              android:gravity="center"
-             android:text=" la cocina Peruana ha crecido hasta convertirse en una de la las más finas del mundo. La variedad de especies, así como la mezcla de varias culturas convierten a las comidas típicas peruanas en propuestas únicas."
-             android:textSize="16sp"
-             android:textStyle="bold" />
+             android:layout_margin="@dimen/cardview_default_radius"
+             android:text="Lo mejor de la distancia es el reencuentro. Las formas cambian,pero el espíritu se mantiene: seguimos enamorados de la cocina.Hoy, más que nunca, queremos compartir ese sentimiento contigo"
+             android:textSize="25sp"
+             android:background="@drawable/gradient_background"
+             android:textStyle="italic" />
+
 
          <TextView
+
              android:id="@+id/nombreUsuario"
              android:layout_width="241dp"
              android:layout_height="55dp"
              android:layout_gravity="center"
              android:layout_margin="3dp"
              android:layout_weight="1"
-             android:text="HOLA USUARIO"
+
              android:textAlignment="center"
              android:textColor="@android:color/holo_purple"
              android:textStyle="bold" />
