--- a/app/src/main/res/layout/main_nav_drawer.xml
+++ b/app/src/main/res/layout/main_nav_drawer.xml
@@ -6,27 +6,10 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="200dp"
         android:layout_margin="16dp"
         android:onClick="ClickLogo"
-        android:src="@drawable/icon_logo" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Cibertec Proyecto"
-        android:textAlignment="center"
-        android:textColor="#636363"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Dioses@gmail.com"
-        android:textAlignment="center"
-        android:textColor="#636363"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:src="@drawable/logo" />
 
     <View
         android:layout_width="match_parent"
@@ -42,11 +25,13 @@
         android:onClick="ClickHome"
         android:orientation="horizontal">
 
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_weight="1"
+            android:textSize="20dp"
             android:padding="12dp"
             android:text="Inicio" />
 
@@ -71,6 +56,7 @@
             android:layout_marginStart="16dp"
             android:layout_weight="1"
             android:padding="12dp"
+            android:textSize="20dp"
             android:text="Comidas" />
 
         <ImageView
@@ -95,6 +81,7 @@
             android:layout_marginStart="16dp"
             android:layout_weight="1"
             android:padding="12dp"
+            android:textSize="20dp"
             android:text="Acerca de Nosotros" />
 
         <ImageView
@@ -118,6 +105,7 @@
             android:layout_marginStart="16dp"
             android:layout_weight="1"
             android:padding="12dp"
+            android:textSize="20dp"
             android:text="Cerrar Sesión" />
 
         <ImageView
