--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,35 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="#202732" >
+    android:background="@drawable/gradient_background"
+    >
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="119dp"
-        android:layout_height="116dp"
+        android:layout_width="360dp"
+        android:layout_height="220dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.29"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.123"
-        app:srcCompat="@drawable/android" />
+        app:layout_constraintVertical_bias="0.092"
+        app:srcCompat="@drawable/logo" />
 
     <EditText
         android:id="@+id/User"
         android:layout_width="301dp"
         android:layout_height="48dp"
         android:backgroundTint="@color/colorAccent"
-        android:drawableLeft="@drawable/email"
+        android:drawableLeft="@drawable/icon_user"
         android:ems="10"
         android:hint="Usuario"
-        android:textColorHint="@android:color/white"
         android:inputType="textEmailAddress"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
+        android:textColorHint="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.131" />
+        app:layout_constraintVertical_bias="0.01" />
 
     <EditText
         android:id="@+id/Pass"
@@ -41,12 +43,12 @@
         android:layout_height="43dp"
         android:layout_marginTop="28dp"
         android:backgroundTint="@color/colorAccent"
-        android:drawableLeft="@drawable/password"
+        android:drawableLeft="@drawable/icon_password"
         android:ems="10"
         android:hint="Password"
-        android:textColorHint="@android:color/white"
+        android:textColorHint="@android:color/black"
         android:inputType="textPassword"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/User" />
@@ -55,8 +57,8 @@
         android:id="@+id/btnEntrar"
         android:layout_width="298dp"
         android:layout_height="56dp"
-        android:layout_marginTop="28dp"
-        android:background="@drawable/button_rounded"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/button_rounded_blue"
         android:text="Ingresar"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,8 +70,8 @@
         android:id="@+id/btnRegistrar"
         android:layout_width="298dp"
         android:layout_height="56dp"
-        android:layout_marginTop="108dp"
-        android:background="@drawable/button_border"
+        android:layout_marginTop="96dp"
+        android:background="@drawable/button_roudend_red"
         android:text="REGISTRAR"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,32 +83,32 @@
         android:id="@+id/imageView9"
         android:layout_width="56dp"
         android:layout_height="51dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.304"
+        app:layout_constraintHorizontal_bias="0.388"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnRegistrar"
-        app:srcCompat="@drawable/facebook"
-         />
+        app:srcCompat="@drawable/facebook" />
 
     <ImageView
         android:id="@+id/imageView10"
         android:layout_width="47dp"
         android:layout_height="50dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.706"
+        app:layout_constraintHorizontal_bias="0.582"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnRegistrar"
-        app:srcCompat="@drawable/google"
-         />
+        app:srcCompat="@drawable/google" />
 
     <ImageView
         android:id="@+id/imageView12"
-        android:layout_width="130dp"
-        android:layout_height="91dp"
+        android:layout_width="180dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/cibertec" />
 
