--- a/app/src/main/res/layout/activity_plato_nuevo.xml
+++ b/app/src/main/res/layout/activity_plato_nuevo.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
-    tools:context=".PedidoNuevoActivity">
+    tools:context=".PlatoNuevoActivity">
 
 
     <LinearLayout
@@ -20,7 +20,7 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="NUEVO PEDIDO"
+            android:text="NUEVO PLATO"
             android:textAlignment="center"
             android:textColor="#25AA9E"
             android:textSize="30sp"
@@ -78,13 +78,13 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_margin="10dp"
-            android:background="@color/colorAccent"
+            android:pointerIcon="top_left_diagonal_double_arrow"
             android:textAlignment="center" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:orientation="horizontal">
 
             <Button
@@ -92,7 +92,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/button_rounded"
+                android:background="@drawable/button_rounded_blue"
                 android:onClick="BotonNuevoPedido"
                 android:text="Limpiar"
                 android:textColor="#FFFFFF" />
@@ -102,7 +102,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/button_rounded"
+                android:background="@drawable/button_rounded_blue"
                 android:onClick="BotonListarPedidos"
                 android:text="Listar"
                 android:textColor="#FFFFFF" />
@@ -113,13 +113,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/button_rounded"
+                android:background="@drawable/button_rounded_blue"
                 android:onClick="BotonGrabarPedido"
                 android:text="Grabar"
                 android:textColor="#FFFFFF" />
-
-
-
 
         </LinearLayout>
 
@@ -127,19 +124,17 @@
             android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/button_rounded"
+            android:layout_margin="5dp"
+            android:background="@drawable/button_rounded_blue"
             android:onClick="BotonPedidoPorCategoria"
-            android:text="Pedidos  por Categoria"
+            android:text="Platos por Categoria"
             android:textColor="#FFFFFF" />
-
-
         <Button
             android:id="@+id/buttonSalir"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:background="@drawable/button_rounded"
+            android:background="@drawable/button_roudend_red"
             android:onClick="salir"
             android:text="Salir"
             android:textColor="#FFFFFF" />
