--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -17,12 +17,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Cibertec Proyecto"
+        android:text="BARBECUE HOT % TASTY"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textAlignment="center"
         android:textColor="#636363"
-
         />
     <ImageView
         android:layout_width="wrap_content"
