--- a/app/src/main/res/layout/activity_plato_nuevo.xml
+++ b/app/src/main/res/layout/activity_plato_nuevo.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
-    tools:context=".PlatoNuevoActivity">
+    tools:context=".PlatoNuevoActivity"
+    >
 
 
     <LinearLayout
@@ -61,6 +62,7 @@
             android:ems="10"
             android:hint="Ingrese Cantidad"
             android:inputType="number" />
+
 
 
         <EditText
