--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorBtn">#186CD1</color>
+    <color name="colorBtnPress">#FF3300</color>
+    
+    <color name="colorUno">#3F51B5</color>
+    <color name="colorDos">#00BCD4</color>
+    <color name="colorTres">#8CC2CE</color>
+
 </resources>
